# Proyecto_Apolo-11

./: .gitignore  LICENSE  README.md  __main__.py  apolo_11.py  pyproject.toml  setup.cfg
apolo_11/config/: conf.yaml  menu.yaml  missions.yaml  sys.yaml
apolo_11/src/archivos/: contenido.py  gestor.py  nombre.py
apolo_11/src/datos/: data_generator.py  device.py  general.py  mission.py
apolo_11/src/menu/: cli_control.py
apolo_11/src/reportes/: consolidado.py  reportes.py
tests/: conftest.py
tests/archivos/: test_archivos.py
tests/datos/: test_datos.py
